# aoc_2024

./: .gitignore  CMakeLists.txt
src/common/: args.cpp  args.hpp
src/day_01/: day_01.cpp
src/day_02/: day_02.cpp
src/day_03/: day_03.cpp
src/day_04/: day_04.cpp
src/day_05/: day_05.cpp
